src/objects/ProfileToFeatureAccess__c.object
<CustomObject>
    <fields>
        <fullName>Feature_Accessible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the profile has access to that particular feature. If the profile + feature combo is missing in the Role Feature table or the profile + feature combo exists with access unchecked  - the code will treat both conditions as &apos;feature inaccessible&apos;</description>
        <label>Feature Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeaturesList__c</fullName>
        <description>List of all the features like buttons,  links,  pages which we want to control through code [where Sharing rules, field level security or profile access can&apos;t be used]</description>
        <label>FeaturesList</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enquiry Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDNB Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HWC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Interaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProfileList__c</fullName>
        <description>List of all profiles in the org. Since we cant have a lookup to profile obj, new profiles if added needs to be manually updated in the drop down</description>
        <label>ProfileList</label>
        <picklist>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSC TL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Inhouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Strategy Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Data Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Strategy Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presales User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreSales Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Head</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Single_User_Access_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If within a profile we want to have all users to have access but not a single user then enter only that user name and set feature access as no.
Similarly if the entire profile doesnt have access but one user should have access, then enter the user and make the access as &quot;Yes&quot;</description>
        <label>Single User Access Exception</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProfileToFeatureAccess</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ProfileToFeatureAccess</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Feature_Accessible__c</columns>
        <columns>FeaturesList__c</columns>
        <columns>ProfileList__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PFA-{00000}</displayFormat>
        <label>ProfileToFeatureAccess Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProfileToFeatureAccess</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>